[gd_scene load_steps=3 format=3 uid="uid://cyrywa55cv34t"]

[ext_resource type="FontFile" uid="uid://b77ncxyq0o3iy" path="res://Space_Shooter_Showcase/Bonus/kenvector_future.ttf" id="1_611rd"]
[ext_resource type="Script" path="res://Space_Shooter_Showcase/Scenes/ui.gd" id="1_g4da2"]

[node name="UI" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_g4da2")

[node name="TitleContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_right = 142.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_611rd")
theme_override_font_sizes/font_size = 40
text = "Space Shooters"

[node name="HealthContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 120.0
grow_vertical = 0
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HealthContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
